resource server api gateway completed